update device transfer

--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -17,7 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "import torch\n",
+    "import torchvision"
    ]
   },
   {
@@ -32,7 +33,7 @@
     "self.register_buffer('min', torch.tensor([], requires_grad=False))\n",
     "self.register_buffer('max', torch.tensor([], requires_grad=False))\n",
     "\n",
-    "# 对于需要在设备之间转移的变量，必须将其注册为nn.Parameter 或者 buffer，比如说self.M(见quantization.ipynb:QConv2d:freeze)\n",
+    "# 对于需要在设备之间转移的变量，需要时nn.Module的子类，所以必须将其注册为nn.Parameter 或者 buffer，比如说self.M(见quantization.ipynb:QConv2d:freeze)\n",
     "self.register_buffer('M', torch.tensor([], requires_grad=False))\n",
     "self.M.data = (self.qw.scale*self.qi.scale / self.qo.scale).data  #赋值tensor而不是对象本身\n"
    ]
@@ -40,7 +41,66 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data's device:cpu,model's device:cpu\n",
+      "data's device: cuda:0\n",
+      "model's device: cuda:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = torch.zeros(1,2)\n",
+    "model = torchvision.models.resnet18()\n",
+    "\n",
+    "# 模型所在的设备，需要查看其参数所在的设备\n",
+    "print(\"data's device:{},model's device:{}\".format(data.device,next(model.parameters()).device))\n",
+    "\n",
+    "# 将数据进行转移，必须使用赋值\n",
+    "data = data.cuda()\n",
+    "data = data.to(\"cuda\")\n",
+    "\n",
+    "# data.cuda()  #error! tensor只使用这句是不够的\n",
+    "print(\"data's device:\",data.device)\n",
+    "\n",
+    "# 将model转移到cuda,不需要赋值，赋值也可以\n",
+    "model.cuda()\n",
+    "model.to(\"cuda\")\n",
+    "model = model.cuda()\n",
+    "model = model.to(\"cuda\")\n",
+    "print(\"model's device:\",next(model.parameters()).device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 0.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
   },
   {
    "cell_type": "code",
