--- a/quantization.ipynb
+++ b/quantization.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +617,7 @@
     "        self.bn_module = bn_module\n",
     "        self.qw = QParam(num_bits=num_bits)\n",
     "        self.qb = QParam(num_bits=32)\n",
-    "        # M = torch.tensor([], requires_grad=False) # 将M注册为buffer\n",
+    "        M = torch.tensor([], requires_grad=False) # 将M注册为buffer\n",
     "        self.register_buffer('M', M)  \n",
     "\n",
     "    def fold_bn(self, mean, std):\n",
@@ -705,8 +705,8 @@
     "        if qo is not None:\n",
     "            self.qo = qo\n",
     "\n",
-    "        # self.M.data = (self.qw.scale*self.qi.scale / self.qo.scale).data\n",
-    "        self.M = self.qw.scale * self.qi.scale / self.qo.scale\n",
+    "        self.M.data = (self.qw.scale*self.qi.scale / self.qo.scale).data\n",
+    "        # self.M = self.qw.scale * self.qi.scale / self.qo.scale\n",
     "\n",
     "        std = torch.sqrt(self.bn_module.running_var + self.bn_module.eps)\n",
     "\n",
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1373,7 @@
        "device(type='cpu')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,18 +1384,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "device(type='cpu')"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'QConvBNReLU' object has no attribute 'M'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/geng/tinyml/python-code-space/quantization.ipynb Cell 44'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bgpu69/home/geng/tinyml/python-code-space/quantization.ipynb#ch0000042vscode-remote?line=0'>1</a>\u001b[0m model_qat\u001b[39m.\u001b[39;49mqconv1\u001b[39m.\u001b[39;49mM\u001b[39m.\u001b[39mdevice\n",
+      "File \u001b[0;32m~/anaconda3/envs/ppq/lib/python3.8/site-packages/torch/nn/modules/module.py:1207\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1205\u001b[0m     \u001b[39mif\u001b[39;00m name \u001b[39min\u001b[39;00m modules:\n\u001b[1;32m   1206\u001b[0m         \u001b[39mreturn\u001b[39;00m modules[name]\n\u001b[0;32m-> 1207\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m object has no attribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[1;32m   1208\u001b[0m     \u001b[39mtype\u001b[39m(\u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m, name))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'QConvBNReLU' object has no attribute 'M'"
+     ]
     }
    ],
    "source": [
