--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -46,6 +46,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在设备之间转移模型和数据"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -83,23 +90,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0., 0.]])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "data"
+    "指定使用的显卡\n",
+    "在shell 环境中\n",
+    "```shell\n",
+    "CUDA_VISIBLE_DEVICES=\"1,2\" python train.py\n",
+    "```"
    ]
   },
   {
@@ -107,7 +105,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 在python代码中\n",
+    "import os \n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = \"1,2\"\n"
+   ]
   }
  ],
  "metadata": {
