add pytorch to onnx

--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -110,6 +110,47 @@
     "import os \n",
     "os.environ['CUDA_VISIBLE_DEVICES'] = \"1,2\"\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pytorch->onnx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.onnx \n",
+    "\n",
+    "#Function to Convert to ONNX \n",
+    "def Convert_ONNX(): \n",
+    "\n",
+    "    # set the model to inference mode \n",
+    "    model.eval() \n",
+    "\n",
+    "    # Let's create a dummy input tensor  \n",
+    "    input_size = (3,224,224)\n",
+    "    dummy_input = torch.randn(1, *input_size, requires_grad=True)  \n",
+    "\n",
+    "    # Export the model   \n",
+    "    torch.onnx.export(model,         # model being run \n",
+    "         dummy_input,       # model input (or a tuple for multiple inputs) \n",
+    "         \"resnet18.onnx\",       # where to save the model  \n",
+    "         export_params=True,  # store the trained parameter weights inside the model file \n",
+    "         opset_version=10,    # the ONNX version to export the model to \n",
+    "         do_constant_folding=True,  # whether to execute constant folding for optimization \n",
+    "         input_names = ['input'],   # the model's input names \n",
+    "         output_names = ['output'], # the model's output names \n",
+    "         dynamic_axes={'input' : {0 : 'batch_size'},    # variable length axes \n",
+    "                                'output' : {0 : 'batch_size'}}) \n",
+    "    print(\" \") \n",
+    "    print('Model has been converted to ONNX') \n",
+    "Convert_ONNX()"
+   ]
   }
  ],
  "metadata": {
