--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -151,6 +151,34 @@
     "    print('Model has been converted to ONNX') \n",
     "Convert_ONNX()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "使用onnxsim对onnx模型进行简化，安装方式：\n",
+    "```shell\n",
+    "pip install onnxsim\n",
+    "```\n",
+    "有两种执行方式：\n",
+    "1. 在终端执行\n",
+    "```shell\n",
+    "onnxsim old.onnx sim.onnx\n",
+    "```\n",
+    "2. 在python代码中\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "onnx_model = onnx.load(f'{os.path.join(cfg.FP32_BASE_PATH, name)}-FP32.onnx') \n",
+    "model_simp, check = simplify(onnx_model)   #对onnx模型进行简化，消除冗余算子        \n",
+    "assert check, \"Simplified ONNX model could not be validated\"\n",
+    "onnx.save(model_simp, f'{os.path.join(cfg.FP32_BASE_PATH, name)}-FP32.onnx')"
+   ]
   }
  ],
  "metadata": {
